--- a/style.css
+++ b/style.css
@@ -31,12 +31,31 @@ img{
     background-color: #cd1b1b; /* red */
     color: white;
   }
-  .bb{
-    background-color: rgb(245, 164, 164);
-      /* border-collapse: collapse; */
-    }
+  .button {
+    border-radius: 10%;
+    background-color: #6457fa; /* Green */
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 20px;
+  }
   .glow{
       background-color: #00ff40;
+      
+        /* border-collapse: collapse; */
+
+    }
+    .black{
+      background-color: #8b8b8b;
+      
+        /* border-collapse: collapse; */
+
+    }
+    .white{
+      background-color: #f9fffa;
       
         /* border-collapse: collapse; */
 
